--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,5 @@
 ---
-interface Props {
-	title: string;
-}
 
-const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -12,9 +8,16 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Acme&family=Merienda:wght@300..900&family=Orbitron:wght@400..900&family=Permanent+Marker&family=Rock+Salt&display=swap"
+			rel="stylesheet"
+		/>
+		<script src="https://kit.fontawesome.com/ae5f71a2c9.js" crossorigin="anonymous"></script>
+		<title>Portfolio</title>
 	</head>
 	<body>
 		<slot />
@@ -33,9 +36,11 @@ const { title } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: "Merienda", sans-serif;
+		font-weight: 400;
+		font-style: normal;
 		background-size: 224px;
+		scroll-behavior: smooth;
 	}
 	code {
 		font-family:
@@ -47,5 +52,19 @@ const { title } = Astro.props;
 			Bitstream Vera Sans Mono,
 			Courier New,
 			monospace;
+	}
+	#title-section {
+		font-family: "Rock Salt", cursive;
+		font-weight: 400;
+		font-style: normal;
+	}
+
+	@tailwind utilities;
+
+	@layer utilities {
+		.drop-cap::first-letter {
+			@apply text-6xl font-bold float-left mr-2 leading-tight text-indigo-600;
+			line-height: 1;
+		}
 	}
 </style>
