--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -10,14 +10,14 @@
           <div class="flex flex-col">
             <img
               class="rounded w-full"
-              src="/public/pfp.jpeg"
+              src="/pfp.jpeg"
               alt="profile-picture"
             />
             <div class="flex w-full items-center justify-center gap-10 mt-5">
               <a href="https://github.com/busid1" target="_blank" title="github">
                 <i class="fab fa-github text-2xl text-white"></i>
               </a>
-              <a href="../../public/cv.pdf" target="_blank" title="CV">
+              <a href="/cv.pdf" target="_blank" title="CV">
                 <i class="fas fa-file-download text-2xl text-white"></i>            
               </a>
             </div>
