--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
                 href="https://flowbite.com/"
                 class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse"
             >
-                <img src="../../public/favicon.png"
+                <img src="/favicon.png"
                     class="self-center text-2xl w-14 font-semibold whitespace-nowrap dark:text-white"
                     />
             </a>
