--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ import SectionHeader from "./SectionHeader.astro";
 	<div class="flex flex-col gap-20 sm:px-0">
 		<Card
 			projectTitle="GameVortex"
-			projectFrontPage="../../public/gamevortex.png"
+			projectFrontPage="/gamevortex.png"
 			projectSkills={[
 				"https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/React.svg/1024px-React.svg.png",
 				"https://static-00.iconduck.com/assets.00/redux-icon-2048x1945-ahvhunxp.png",
@@ -22,7 +22,7 @@ import SectionHeader from "./SectionHeader.astro";
 		/>
 		<Card
 			projectTitle="UniCourse"
-			projectFrontPage="../../public/uni-course.png"
+			projectFrontPage="/uni-course.png"
 			projectSkills={[
 				"https://vitejs.dev/logo.svg",
 				"https://static-00.iconduck.com/assets.00/mongodb-original-icon-921x2048-hvrb89lu.png",
@@ -36,13 +36,13 @@ import SectionHeader from "./SectionHeader.astro";
 		/>
 		<Card
 			projectTitle="UniLauncher"
-			projectFrontPage="../../public/uni-launcher.png"
+			projectFrontPage="/uni-launcher.png"
 			projectSkills={[
 				"https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Apache_NetBeans_Logo.svg/1776px-Apache_NetBeans_Logo.svg.png",
 				"https://cdn-icons-png.flaticon.com/512/226/226777.png",
 				"https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/JSON_vector_logo.svg/1024px-JSON_vector_logo.svg.png"
 			]}
-			projectLink="../../public/uni-launcher-video.mp4"
+			projectLink="/uni-launcher-video.mp4"
 		/>
 	</div>
 </div>
