--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,35 +1,33 @@
-<div id="about" class="bg-gradient-to-b from-slate-800 to-transparent w-full mb-10 xs:px-8">
-    <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
-      <div class="text-left">
-        <h1
-          class="text-4xl text-center font-bold mb-5 tracking-tight text-white sm:text-5xl"
-        >
-          Hii:), my name is <b class="text-indigo-600">Busid </b>and...
-        </h1>
-        <div class="flex justify-center items-center gap-10 xs:flex-wrap sm:flex-nowrap" id="aboutBox">
-          <div class="flex flex-col">
-            <img
-              class="rounded w-full"
-              src="/pfp.jpeg"
-              alt="profile-picture"
-            />
-            <div class="flex w-full items-center justify-center gap-10 mt-5">
-              <a href="https://github.com/busid1" target="_blank" title="github">
-                <i class="fab fa-github text-2xl text-white"></i>
-              </a>
-              <a href="/cv.pdf" target="_blank" title="CV">
-                <i class="fas fa-file-download text-2xl text-white"></i>            
-              </a>
-            </div>
+<div
+  id="about"
+  class="bg-gradient-to-b from-slate-800 to-transparent w-full mb-10 xs:px-8"
+>
+  <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+    <div class="text-left">
+      <h1
+        class="text-4xl text-center font-bold mb-5 tracking-tight text-white sm:text-5xl"
+      >
+        Holaa:), me llamo <b class="text-indigo-600">Busid </b>y...
+      </h1>
+      <div
+        class="flex justify-center items-center gap-10 xs:flex-wrap sm:flex-nowrap"
+        id="aboutBox"
+      >
+        <div class="flex flex-col">
+          <img class="rounded w-full" src="/pfp.jpeg" alt="profile-picture" />
+          <div class="flex w-full items-center justify-center gap-10 mt-5">
+            <a href="https://github.com/busid1" target="_blank" title="github">
+              <i class="fab fa-github text-2xl text-white"></i>
+            </a>
+            <a href="/cv.pdf" target="_blank" title="CV">
+              <i class="fas fa-file-download text-2xl text-white"></i>
+            </a>
           </div>
-          <p class="mt-6 text-lg leading-8 text-white drop-cap">
-            I am a fullstack web programmer specialized in the MERN Stack. I
-            have two years of experience in web development, training myself
-            self-taught. I have acquired solid skills in MongoDB,
-            Express.js, React, and Node.js, and I am committed to
-            creating robust and efficient web applications.
-          </p>
         </div>
+        <p class="mt-6 text-lg leading-8 text-white drop-cap">
+          Soy un programador web fullstack especializado en el MERN Stack. Como desarrollador junior con 3 meses de experiencia práctica, he estado comprometido con perfeccionar mis habilidades a través del aprendizaje autodidacta. Estoy comprometido en mejorar continuamente y a crear aplicaciones web robustas y eficientes.
+        </p>
       </div>
     </div>
+  </div>
 </div>
