--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@ import SectionHeader from "./SectionHeader.astro";
 ---
 
 <div class="flex flex-col" id="projects">
-	<SectionHeader text="My Proyects"/>
+	<SectionHeader text="Proyectos"/>
 	<div class="flex flex-col gap-20 sm:px-0">
 		<Card
 			projectTitle="GameVortex"
