--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,9 +2,9 @@
 import SectionHeader from "./SectionHeader.astro"
 ---
 <div class="py-20" id="contact">
-	<SectionHeader text="Contact me"/>
+	<SectionHeader text="Contacto"/>
     <div class="flex flex-col gap-4">
-        <span class="dark:text-white">Email: busid30@gmail.com</span>
-        <span class="dark:text-white">Number: +34 633 37 97 52</span>
+        <span class="dark:text-white">Correo electrónico: busid30@gmail.com</span>
+        <span class="dark:text-white">Teléfono móvil: +34 633 37 97 52</span>
     </div>
 </div>
