--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@
                     class="self-center text-2xl w-14 font-semibold whitespace-nowrap dark:text-white"
                     />
             </a>
-            <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">Made with ❤️ in Astro.</span>
+            <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">Hecho con ❤️ en Astro.</span>
         </div>
     </div>
     <div class="flex justify-center bg-black text-white w-full py-2">
