--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,12 +7,12 @@
             <a
               href="#about"
               class="rounded-full bg-gray-900 px-4 py-2 sm:text-sm xs:text-xs font-medium text-white"
-              aria-current="page">About</a
+              aria-current="page">Sobre mí</a
             >
             <a
               href="#projects"
               class="rounded-full px-4 py-2 sm:text-sm font-medium xs:text-xs text-gray-300 hover:bg-gray-900 hover:text-white"
-              >Projects</a
+              >Proyectos</a
             >
             <a
               href="#skills"
@@ -22,7 +22,7 @@
             <a
               href="#contact"
               class="rounded-full px-4 py-2 sm:text-sm font-medium xs:text-xs text-gray-300 hover:bg-gray-900 hover:text-white"
-              >Contact</a
+              >Contacto</a
             >
           </div>
         </div>
