--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,7 +5,7 @@ import SectionHeader from './SectionHeader.astro';
 ---
 
 <div class="flex flex-col w-full py-36" id="skills">
-  <SectionHeader text="My Skills"/>
+  <SectionHeader text="Mis skills"/>
   
   <!-- Usa el componente Buttons con diferentes textos -->
    <div class="flex xs:gap-5 sm:gap-10 flex-wrap w-full justify-evenly">
@@ -20,5 +20,7 @@ import SectionHeader from './SectionHeader.astro';
        <Button text="MongoDB" />
        <Button text="Firebase" />
        <Button text=".git" />
+       <Button text="AJAX" />
+       <Button text="Tailwind" />
    </div>
 </div>
