--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,32 +1,45 @@
-<div
-  id="about"
-  class="bg-gradient-to-b from-slate-800 to-transparent w-full mb-10 xs:px-8"
->
-  <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
-    <div class="text-left">
-      <h1
-        class="text-4xl text-center font-bold mb-5 tracking-tight text-white sm:text-5xl"
-      >
-        Holaa:), me llamo <b class="text-indigo-600">Busid </b>y...
-      </h1>
-      <div
-        class="flex justify-center items-center gap-10 xs:flex-wrap sm:flex-nowrap"
-        id="aboutBox"
-      >
-        <div class="flex flex-col">
-          <img class="rounded w-full" src="/pfp.jpeg" alt="profile-picture" />
-          <div class="flex w-full items-center justify-center gap-10 mt-5">
-            <a href="https://github.com/busid1" target="_blank" title="github">
-              <i class="fab fa-github text-2xl text-white"></i>
-            </a>
-            <a href="/cv.pdf" target="_blank" title="CV">
-              <i class="fas fa-file-download text-2xl text-white"></i>
-            </a>
-          </div>
+<div id="about" class="w-full mt-32">
+  <div class="flex max-sm:gap-y-1">
+    <div class="flex flex-col mx-auto">
+      <div class="flex items-center justify-between w-full">
+        <hgroup class="flex flex-col">
+          <h2 class="text-5xl max-sm:text-4xl font-bold text-white p-0 mb-2">
+            Hola, soy Busid
+          </h2>
+          <h1 class="text-2xl font-semibold mb-5 text-indigo-600">
+            Desarrollador Web
+          </h1>
+        </hgroup>
+        <div
+          class="flex gap-10 xs:flex-wrap sm:flex-nowrap"
+          id="aboutBox"
+        >
+          <img src="/pfp.png" alt="profile-picture" class="w-40 md:mr-10" />
         </div>
-        <p class="mt-6 text-lg leading-8 text-white drop-cap">
-          Soy un programador web fullstack especializado en el MERN Stack. Como desarrollador junior con 3 meses de experiencia práctica, he estado comprometido con perfeccionar mis habilidades a través del aprendizaje autodidacta. Estoy comprometido en mejorar continuamente y a crear aplicaciones web robustas y eficientes.
-        </p>
+      </div>
+      <p class="text-white text-xl w-11/12">
+        Especializado en el MERN Stack, me encanta transformar ideas en sitios y
+        aplicaciones web funcionales y atractivas.
+      </p>
+      <div class="flex w-full items-center gap-6 mt-5">
+        <a
+          href="https://github.com/busid1"
+          class="bg-neutral-900 hover:bg-neutral-800 transition duration-200 px-4 py-0.5 shadow-sm border border-gray-600 rounded-2xl flex items-center gap-3"
+          target="_blank"
+          title="Mi GitHub"
+        >
+          <i class="fab fa-github text-xl text-white"></i>
+          <span class="text-white font-medium">GitHub</span>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/busid-elhiani"
+          target="_blank"
+          title="Mi Linkedin"
+          class="bg-blue-700 hover:bg-blue-600 transition duration-200 px-4 py-0.5 shadow-sm border border-blue-500 rounded-2xl flex items-center gap-3"
+        >
+          <i class="fab fa-linkedin text-xl text-white"></i>
+          <span class="text-white font-medium">Linkedin</span>
+        </a>
       </div>
     </div>
   </div>
