--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,7 +1,7 @@
 ---
 import SectionHeader from "./SectionHeader.astro"
 ---
-<div class="py-20" id="contact">
+<div class="xs:pt-5 sm:pt-10" id="contact">
 	<SectionHeader text="Contacto"/>
     <div class="flex flex-col gap-4">
         <span class="dark:text-white">Correo electrónico: busid30@gmail.com</span>
