--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,18 +1,14 @@
 <footer class="shadow bg-indigo-800 mt-24">
-    <div class="w-10/12 max-w-screen-xl mx-auto py-6">
-        <div class="sm:flex sm:items-center sm:justify-between">
+    <div class="max-w-2xl max-sm:w-9/12 mx-auto py-2">
+        <div class="flex justify-between items-center">
             <a
-                href="https://flowbite.com/"
-                class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse"
+                href="/"
             >
                 <img src="/favicon.png"
-                    class="self-center text-2xl w-14 font-semibold whitespace-nowrap dark:text-white"
+                    class="self-center text-2xl w-10 font-semibold whitespace-nowrap dark:text-white"
                     />
             </a>
             <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">Hecho con ❤️ en Astro.</span>
         </div>
-    </div>
-    <div class="flex justify-center bg-black text-white w-full py-2">
-        Copyright ©2024
     </div>
 </footer>
