--- a/src/components/SectionHeader.astro
+++ b/src/components/SectionHeader.astro
@@ -12,7 +12,7 @@ const { text } = Astro.props as Props;
             id="title-section">{text}</span
         >
         <span
-            class="absolute -bottom-1 right-0 transition-all h-1 bg-indigo-600 xs:w-28 sm:w-36"
+            class="absolute -bottom-1 right-0 transition-all h-1 bg-indigo-600 max-sm:w-24 w-32"
         ></span>
     </p>
 </div>
