--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,27 +1,22 @@
-<header>
-  <nav class="bg-indigo-600 bg-opacity-70 sm:w-full md:w-9/12 2xl:w-6/12 px-2">
-    <div class="mx-auto max-w-8xl sm:px-3 lg:px-6">
+<header class="flex justify-center w-full mx-auto mt-2">
+  <nav class="flex justify-center mx-3" id="headerNav">
+    <div class="sm:px-3 lg:px-6">
       <div class="relative flex h-12 items-center justify-center">
         <div class="flex flex-1 items-center justify-evenly">
-          <div class="flex justify-evenly w-full sm:flex-wrap" id="navSections">
+          <div class="flex justify-evenly items-center w-full" id="navSections">
             <a
-              href="#about"
-              class="rounded-full bg-gray-900 px-4 py-2 sm:text-sm xs:text-xs font-medium text-white"
-              aria-current="page">Sobre mí</a
+              href="#experience"
+              class="rounded-full px-4 py-2 sm:text-lg font-medium xs:text-sm text-gray-300 hover:bg-gray-900 hover:text-white"
+              >Experiencia</a
             >
             <a
               href="#projects"
-              class="rounded-full px-4 py-2 sm:text-sm font-medium xs:text-xs text-gray-300 hover:bg-gray-900 hover:text-white"
+              class="rounded-full px-4 py-2 sm:text-lg font-medium xs:text-sm text-gray-300 hover:bg-gray-900 hover:text-white"
               >Proyectos</a
             >
             <a
-              href="#skills"
-              class="rounded-full px-4 py-2 sm:text-sm font-medium xs:text-xs text-gray-300 hover:bg-gray-900 hover:text-white"
-              >Skills</a
-            >
-            <a
               href="#contact"
-              class="rounded-full px-4 py-2 sm:text-sm font-medium xs:text-xs text-gray-300 hover:bg-gray-900 hover:text-white"
+              class="rounded-full px-4 py-2 sm:text-lg font-medium xs:text-sm text-gray-300 hover:bg-gray-900 hover:text-white"
               >Contacto</a
             >
           </div>
@@ -33,58 +28,60 @@
 
 <style>
   header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-top: 20px;
     position: fixed;
     z-index: 100;
-  }
-
-  header > nav {
-    border-radius: 30px;
-    backdrop-filter: blur(5px);
+    left: 0;
   }
 
   #navSections > a {
     transition: all 0.2s linear;
+    margin: 3px;
   }
 </style>
 
 <script>
   const navSections = document.querySelector("#navSections");
+  const headerNav = document.querySelector("#headerNav");
   let currentSection = "";
+  const children = navSections?.children;
   const isScrollY = () => {
-    const children = navSections?.children;
     if (children) {
       for (let i = 0; i < children.length; i++) {
-        children[i].classList.remove("bg-gray-900");
+        children[i].classList.remove("text-indigo-500");
       }
     }
-    if (window.scrollY >= 0 && window.scrollY <= 400) {
-      currentSection = "about";
+    if (window.scrollY === 0) {
+      headerNav?.classList.remove("bg-neutral-800");
+    }
+    if (window.scrollY > 0) {
+      headerNav?.classList.add("bg-neutral-800", "rounded-full");
+    }
+    if (window.scrollY >= 300 && window.scrollY <= 600) {
+      currentSection = "experience";
       if (children) {
-        children[0].classList.add("bg-gray-900");
+        headerNav?.classList.add("bg-neutral-800", "rounded-full");
+        children[0].classList.add("text-indigo-500");
       }
-    } else if (window.scrollY >= 400 && window.scrollY <= 1600) {
+    } else if (window.scrollY >= 600 && window.scrollY <= 1200) {
       currentSection = "projects";
       if (children) {
-        children[1].classList.add("bg-gray-900");
+        children[1].classList.add("text-indigo-500");
+        children[0].classList.remove("text-indigo-500");
+        children[0].classList.add("text-gray-300");
       }
-    } else if (window.scrollY >= 1600 && window.scrollY <= 2000) {
-      currentSection = "skills";
-      if (children) {
-        children[2].classList.add("bg-gray-900");
-      }
-    } else if (window.scrollY >= 2000) {
+    } else if (window.scrollY >= 1200) {
       currentSection = "contact";
       if (children) {
-        children[3].classList.add("bg-gray-900");
+        children[1].classList.add("text-gray-300");
+        children[2].classList.add("text-indigo-500");
+        headerNav?.classList.add("bg-neutral-800", "rounded-full");
       }
     } else {
       currentSection = "";
     }
   };
+  console.log(window.scrollY);
+  
+  isScrollY();
   window.addEventListener("scroll", isScrollY);
 </script>
