--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,25 +1,30 @@
 ---
+interface Props {
+	title: string;
+	description: string;
+}
 
+const {
+	title,
+	description
+} = Astro.props as Props
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Acme&family=Merienda:wght@300..900&family=Orbitron:wght@400..900&family=Permanent+Marker&family=Rock+Salt&display=swap"
-			rel="stylesheet"
-		/>
-		<script src="https://kit.fontawesome.com/ae5f71a2c9.js" crossorigin="anonymous"></script>
-		<title>Portfolio</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">		<script src="https://kit.fontawesome.com/ae5f71a2c9.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+		<title>{title}</title> 
 	</head>
-	<body>
+	<body class="bg-neutral-950">
 		<slot />
 	</body>
 </html>
@@ -36,27 +41,8 @@
 		);
 	}
 	html {
-		font-family: "Merienda", sans-serif;
-		font-weight: 400;
-		font-style: normal;
-		background-size: 224px;
+		font-family: "Open Sans", sans-serif;
 		scroll-behavior: smooth;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-	#title-section {
-		font-family: "Rock Salt", cursive;
-		font-weight: 400;
-		font-style: normal;
 	}
 
 	@tailwind utilities;
