--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,23 +3,22 @@ import Layout from "../layouts/Layout.astro";
 import Projects from "../components/Projects.astro";
 import Header from "../components/Header.astro";
 import About from "../components/About.astro";
-import Skills from "../components/Skills.astro";
 import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
+import Experience from "../components/Experience.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main class="w-full bg-slate-950">
-		<Header />
-		<About />
-		<div class="main-content mx-auto xs:px-8 sm:w-2/3 lg:w-2/4 xl:w-1/3">
+<Layout title="Portafolio de Busid - Desarrollador y Programador Web Junior Fullstack" description="Contrata a busid para crear aplicaciones web únicas.">
+	<main
+		class="absolute top-0 z-[-2] h-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))] w-full"
+	>
+		<div class="max-w-2xl max-md:w-9/12 mx-auto flex flex-col gap-5">
+			<Header />
+			<About />
+			<Experience />
 			<Projects />
-			<Skills />
 			<Contact />
 		</div>
 		<Footer />
 	</main>
 </Layout>
-
-<style>
-</style>
