--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -37,7 +37,7 @@ import SectionHeader from "./SectionHeader.astro";
 					"https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Git_icon.svg/2048px-Git_icon.svg.png",
 					"https://images.stripeassets.com/fzn2n1nzq965/HTTOloNPhisV9P4hlMPNA/cacf1bb88b9fc492dfad34378d844280/Stripe_icon_-_square.svg?q=80&w=1082",
 				]}
-				projectLink="https://tienda-universae.onrender.com"
+				projectLink="https://main.d1axyf3uom5eme.amplifyapp.com"
 			/>
 			<Card
 				projectTitle="UniLauncher"
