added new project and update some images link

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,7 +7,7 @@
             Hola, soy Busid
           </h2>
           <h1 class="text-2xl font-semibold mb-5 text-indigo-600">
-            Desarrollador Web
+            Backend Developer
           </h1>
         </hgroup>
         <div
@@ -19,7 +19,7 @@
       </div>
       <p class="text-white text-xl w-11/12">
         Especializado en el MERN Stack, me encanta transformar ideas en sitios y
-        aplicaciones web funcionales y atractivas.
+        aplicaciones web funcionales.
       </p>
       <div class="flex w-full items-center gap-6 mt-5">
         <a
@@ -32,7 +32,7 @@
           <span class="text-white font-medium">GitHub</span>
         </a>
         <a
-          href="https://www.linkedin.com/in/busid-elhiani"
+          href="https://www.linkedin.com/in/busid"
           target="_blank"
           title="Mi Linkedin"
           class="bg-blue-700 hover:bg-blue-600 transition duration-200 px-4 py-0.5 shadow-sm border border-blue-500 rounded-2xl flex items-center gap-3"
