update projects section

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ import SectionHeader from "./SectionHeader.astro";
 	<div class="flex flex-col gap-x-5 gap-y-5">
 		<Card
 			projectTitle="App de reserva de citas - Bookly"
-			projectFrontPage="/bookly.png"
+			projectFrontPage="/bookly-mockup.png"
 			projectDescription="Página creada para reservar citas facilitando tanto al cliente como al dueño una gestión y administración de citas más ordenada y eficiente almacenando estas citas tanto en la web como en el calendario de Google."
 			projectSkills={[
 				"https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/1200px-Angular_full_color_logo.svg.png",
@@ -30,7 +30,7 @@ import SectionHeader from "./SectionHeader.astro";
 		/>
 		<Card
 			projectTitle="GameVortex"
-			projectFrontPage="/gamevortex.png"
+			projectFrontPage="/gamevortex-mockup.png"
 			projectDescription="E-commerce de videojuegos, desarrollado con React y gestionado con Redux. Consume una API REST para la interacción con los datos, mientras que los usuarios y la información de productos se almacenan en Cloud Firestore. Además, los pagos se procesan mediante la integración de Stripe."
 			projectSkills={[
 				"https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/React.svg/1024px-React.svg.png",
@@ -49,28 +49,6 @@ import SectionHeader from "./SectionHeader.astro";
 			projectLink="https://gamevortex-7eca9.web.app/"
 		/>
 		<div class="flex max-sm:flex-col gap-5">
-			<Card
-				projectTitle="Tienda Universae"
-				projectFrontPage="/uni-course.png"
-				projectDescription="Plataforma de compraventa de cursos en línea, desarrollada con Vite y gestionada mediante GitHub para el control de versiones y la colaboración en equipo."
-				projectSkills={[
-					"https://vitejs.dev/logo.svg",
-					"https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/1024px-Bootstrap_logo.svg.png",
-					"https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Git_icon.svg/2048px-Git_icon.svg.png",
-					"https://images.stripeassets.com/fzn2n1nzq965/HTTOloNPhisV9P4hlMPNA/cacf1bb88b9fc492dfad34378d844280/Stripe_icon_-_square.svg?q=80&w=1082",
-					"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuHnJDLOcdm_0b6N6kNj-1OvO9KhKYgqIy0w&s",
-					"https://cdn.worldvectorlogo.com/logos/mongodb-icon-1-1.svg",
-				]}
-				projectSkillsName={[
-					"Vite",
-					"Bootstrap",
-					"Git",
-					"Stripe",
-					"JavaScript",
-					"MongoDB",
-				]}
-				projectLink="https://main.d1axyf3uom5eme.amplifyapp.com"
-			/>
 			<Card
 				projectTitle="CutLink"
 				projectDescription="Su función es simple, introduce un enlace largo en el campo, haz click en el boton shorten y este te proporciona un enlace más corto que te redirigira al mismo sitio que el enlace largo"
